[bug 964965] Fix pulldown menu on mobile questions

--- a/kitsune/sumo/static/less/mobile/main.less
+++ b/kitsune/sumo/static/less/mobile/main.less
@@ -589,7 +589,7 @@ input[type="submit"]:visited {
   left: 0;
   margin-top: 51px;
   position: absolute;
-  right: 0;
+  width: 100%;
   z-index: 8;
 
   .pulldown-panel {
